--- a/Views/Home/Help.cshtml
+++ b/Views/Home/Help.cshtml
@@ -9,16 +9,18 @@
             <div class="panel">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a href="#panelBodyOne" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">How to Play</a>
+                        <a href="#panelBodyOne" class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion">How to Play</a>
                     </h4>
                 </div>
                 <div id="panelBodyOne" class="panel-collapse collapse in">
                     <div class="panel-body text-center">
-                        <p>Bots Against Humanity is a card game application that closely resembles the popular card game 'Cards Against Humanity' except that instead of human players, I've elected to have automated players.<br/>
-                        If you've never played Cards Against Humanity before, here's how it works. There are 2 decks- question cards (black) and answer cards (white). During each round, a question card is drawn and players must submit an appropriate answer card from their hand.
-                        At the end of the round, the funniest or most appropriate answer card will be voted on and the player that played that card will receive a point. <br/> Similarly, in Bots Against Humanity,
-                        I have a game made up of 5 rounds, and in each round, 3 automated players will be submiting an answer card (selected from the answer card selection the user has in their possession) in response to a randomly generated question card. In this application, some cards have different point values depending on what deck they are from and the value of the deck.
-                        At the end of the game, the user will receive a notification letting them now of how many points they've earned and the total will be added to their overall score.</p>
+                        <p>
+                            Bots Against Humanity is a card game application that closely resembles the popular card game 'Cards Against Humanity' except that instead of human players, I've elected to have automated players.<br />
+                            If you've never played Cards Against Humanity before, here's how it works. There are 2 decks- question cards (black) and answer cards (white). During each round, a question card is drawn and players must submit an appropriate answer card from their hand.
+                            At the end of the round, the funniest or most appropriate answer card will be voted on and the player that played that card will receive a point. <br /> Similarly, in Bots Against Humanity,
+                            I have a game made up of 5 rounds, and in each round, 3 automated players will be submiting an answer card (selected from the answer card selection the user has in their possession) in response to a randomly generated question card. In this application, some cards have different point values depending on what deck they are from and the value of the deck.
+                            At the end of the game, the user will receive a notification letting them know of how many points they've earned and the total will be added to their overall score.
+                        </p>
                         <div class="panel">
                             <div class="panel-heading">
                                 <h6 class="panel-title">
@@ -27,8 +29,10 @@
                             </div>
                             <div id="panelBodyOneA" class="panel-collapse collapse in">
                                 <div class="panel-body text-center">
-                                    <p>In order to start playing the game, you have to click on the 'Collect Points' button on the home page. <br/> After creating an account, a new user will be provided with a starter deck of cards with each card being worth 1 point each.
-                                    Users will be able to collect points after completing games and with enough points, they will be able to visit the store to purchase a new card deck with their points.</p>
+                                    <p>
+                                        In order to start playing the game, you have to click on the 'Collect Points' button on the home page. <br /> After creating an account, a new user will be provided with a starter deck of cards with each card being worth 1 point each.
+                                        Users will be able to collect points after completing games and with enough points, they will be able to visit the store to purchase a new card deck with their points.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -40,8 +44,10 @@
                             </div>
                             <div id="panelBodyOneB" class="panel-collapse collapse in">
                                 <div class="panel-body text-center">
-                                    <p>Visit the Store to purchase more card decks! By purchasing more decks, a user will be able to add more diverse cards to their answer card collection that the automated players will be choosing from. Also, the more points a deck costs
-                                    to purchase, the higher the point value of the 5 cards in the deck. </p>
+                                    <p>
+                                        Visit the Store to purchase more card decks! By purchasing more decks, a user will be able to add more diverse cards to their answer card collection that the automated players will be choosing from. Also, the more points a deck costs
+                                        to purchase, the higher the point value of the 5 cards in the deck.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -66,13 +72,30 @@
             <div class="panel">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a href="#panelBodyThree" class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion">About the Bots</a>
+                        <a href="#panelBodyThree" class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion">Navigation</a>
                     </h4>
                 </div>
                 <div id="panelBodyThree" class="panel-collapse collapse">
                     <div class="panel-body text-center">
-                        <p>The 3 automated players or the little robots want to keep their anonymity during the game because they know how strongly bias plays a role in human decisions.
-                        However, it seems unfair to not give them the credit they are due, so I would love nothing more than to introduce the 3 dedicated little bots working hard to make you laugh!</p>
+                        <p>
+                            As a card game application, the navigation for this app is kept simplistic. There are two main buttons that can be accessed from the home page- "Collect Points" and "Visit the Store"- to either
+                            play a game or go to the store to purchase a deck. And the home page can be accessed at any point by selecting the "Bots Against Humanity" logo on the top left side of the page in the navigation bar.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="panel">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a href="#panelBodyFour" class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion">About the Bots</a>
+                    </h4>
+                </div>
+                <div id="panelBodyFour" class="panel-collapse collapse">
+                    <div class="panel-body text-center">
+                        <p>
+                            The 3 automated players or the little robots want to keep their anonymity during the game because they know how strongly bias plays a role in human decisions.
+                            However, it seems unfair to not give them the credit they are due, so I would love nothing more than to introduce the 3 dedicated little bots working hard to make you laugh!
+                        </p>
                         <div class="container">
                             <div class="row justify-content-between">
                                 <div class="card" style="width: 12rem;">
